Logging Telescope and Fix Documentation
